--- a/docs/Interview/美团1.md
+++ b/docs/Interview/美团1.md
@@ -67,7 +67,7 @@
       - value为value
     - 线性探测法,环形的
     - 一个ThreadLocal只能保存一个值
-    
+
 6. 线程间通信方式有哪些？
    - 锁机制：互斥锁，条件变量，读写锁
    - 信号量机制
@@ -83,10 +83,20 @@
 
 链表的头插和尾插
 
-10. concurrentHashMap 怎么保证的并发：cas+synchronized
+10. concurrentHashMap 怎么保证的并发：cas+synchronized[WOW](https://www.cnblogs.com/sanzao/p/10792546.html)
+    - synchronized 锁住要修改的桶
+    - cas
+      - tabAt
+      - casTabAt
+      - setTabAt
+    - 缺点
+      - 自旋费时
+      - 单变量
+      - ABA问题 AtomicStampedReference、AtomicMarkableReference
 
 11. cas 是什么？
-
+   - compare and swap 乐观锁
+   - object,offset,except,newval
 12. SpringMVC + Mybatis 在哪用过，有遇到过什么问题？
 
 13. 对 RPC 框架的理解
@@ -97,9 +107,23 @@
 
 ### 二面（30min）
 1. mysql 存储引擎，Innodb 有哪些特性？
+   - innodb
+     - 表,行级锁
+       - 锁算法
+         - record
+         - gap lock
+         - next-key lock
+     - 事务
+     - 奔溃恢复
+     - 外键
+     - mvcc
+
+   - myisam
+   - memory
 2. 聚集索引，联合索引
 3. 为什么最左前缀，select * from table where a>1 and b=2 怎么建索引
 4. 事务 ACID
+   
 5. 算法题：给出一个字符数组 s，输出循环左移k位后的结果？比如 s=abcde，k=3，输出 deabc。（不要直接调用 String 的 api）
 6. 反问环节
 
